# pydatev

./: MANIFEST.in  README.md  __init__.py  pydatev.py  setup.cfg  setup.py
src/: pydatev.py
src/pydatev/: pydatev.py
