[metadata]
name = pydatev
version = 0.1.0
license=GPLv3
author = Frank Stollmeier
author_email = fjanks@directbox.com
description = A python module to import and export DATEV files.
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3) 
    Operating System :: OS Independent
    Topic :: Office/Business :: Financial :: Accounting
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
